# docs/swagger/swagger.yaml
@@ -37,6 +37,7 @@ paths: # TODO 変数の命名を確認する
         - $ref: "#/components/parameters/notOverDueInQuery"
         - $ref: "#/components/parameters/hasMyResponseInQuery"
         - $ref: "#/components/parameters/hasMyDraftInQuery"
+        - $ref: "#/components/parameters/isPublishedInQuery"
         - $ref: "#/components/parameters/countOnlyInQuery"
       responses:
         "200":
@@ -474,6 +475,15 @@ components:
       description: |
         trueの場合、自分の回答の下書きが存在するアンケートのみを取得する。
         falseの場合、自分の回答の下書きが存在しないアンケートのみを取得する。
+        存在しない場合、すべてのアンケートを取得する。
+      schema:
+        type: boolean
+    isPublishedInQuery:
+      name: isPublished
+      in: query
+      description: |
+        trueの場合、公開済みのアンケートのみを取得する。
+        falseの場合、未公開のアンケートのみを取得する。
         存在しない場合、すべてのアンケートを取得する。
       schema:
         type: boolean
