# openapi/types.go
@@ -729,6 +729,9 @@ type CountOnlyInQuery = bool
 // HasMyDraftInQuery defines model for hasMyDraftInQuery.
 type HasMyDraftInQuery = bool
 
+// IsPublishedInQuery defines model for isPublishedInQuery.
+type IsPublishedInQuery = bool
+
 // HasMyResponseInQuery defines model for hasMyResponseInQuery.
 type HasMyResponseInQuery = bool
 
@@ -797,6 +800,11 @@ type GetQuestionnairesParams struct {
 	// falseの場合、自分の回答の下書きが存在しないアンケートのみを取得する。
 	// 存在しない場合、すべてのアンケートを取得する。
 	HasMyDraft *HasMyDraftInQuery `form:"hasMyDraft,omitempty" json:"hasMyDraft,omitempty"`
+
+	// IsPublished trueの場合、公開済みのアンケートのみを取得する。
+	// falseの場合、未公開のアンケートのみを取得する。
+	// 存在しない場合、すべてのアンケートを取得する。
+	IsPublished *IsPublishedInQuery `form:"isPublished,omitempty" json:"isPublished,omitempty"`
 
 	// CountOnly trueの場合、questionnaires は空配列で返し、件数情報のみ取得する。page は無視される。
 	CountOnly *CountOnlyInQuery `form:"countOnly,omitempty" json:"countOnly,omitempty"`
